deployment/istio/weather-app/api-routing.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: api
  spec:
    host: weather-api.weather.svc.cluster.local
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: api-route
  spec:
    hosts:
    - weather-api.weather.svc.cluster.local
    http:
    ## MATCH HEADERS
    - match:
      - headers:
          x-api-version:
            exact: v2
      ## MATCH USER-AGENT
      # - headers:
      #     user-agent:
      #       regex: ".*Chrome.*"
      ## MATCH COOKIE
      # - headers:
      #     cookie:
      #       regex: ^(.*?;)?(pechyvo=123)(;.*)?$
      route:
      - destination:
          host: weather-api.weather.svc.cluster.local
          subset: v2
      # mirror:
        # host: ubuntu
    ## FAULT INJECTION
    - match:
      - headers:
          delay:
            exact: enabled
      fault:
        delay:
          fixedDelay: 5s
          percent: 100
      route:
      - destination:
          host: weather-api.weather.svc.cluster.local
    - match:
      - headers:
          abort:
            exact: enabled
      fault:
        abort:
          percent: 50
          httpStatus: 400
      route:
      - destination:
          host: weather-api.weather.svc.cluster.local
    ## DEFAULT ROUTE
    - route:
      - destination:
          host: weather-api.weather.svc.cluster.local
          subset: v1
        weight: 100
      # - destination:
      #     host: weather-api.weather.svc.cluster.local
      #     subset: v2
      #   weight: 10
