deployment/istio/weather-app/istio-virtualservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: istio-ingress-routes
    namespace: istio-system
  spec:
    hosts:
    - "*"
    gateways:
    - istio-gateway
    http:
    - match:
      - uri:
          exact: /weather
      - uri:
          exact: /somefunnyurl
      rewrite:
        uri: /
      route:
      - destination:
          host: weather-ui.weather.svc.cluster.local
          port:
            number: 80
