deployment/istio/weather-app/weather-egress.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: ServiceEntry
  metadata:
    name: weather-external-resources
    namespace: weather
  spec:
    hosts:
    - api.openweathermap.org
    - api.wunderground.com
    ports:
    - number: 80
      name: http
      protocol: HTTP
