deployment/istio/weather-app/weather-virtaulservice.yaml
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: weather-route
    # namespace: demo
  spec:
    hosts:
    - "*"
    gateways:
    - istio-gateway
    http:
    - match:
      - uri:
          exact: /weather
      rewrite:
        uri: /
      route:
      - destination:
          host: weather-ui.weather.svc.cluster.local
          port:
            number: 80
